Ampersands and italics touch ups

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -79,7 +79,7 @@ Candidacy Fall 2018 \\
 
 \subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME \hfill 2014}
 \textit{Bachelor of Arts}: Earth and Oceanographic Science with Honors, Classics minor \\
-\textit{Summa cum Laude, $\Phi$BK Society}
+\textit{Summa cum Laude}, $\Phi$BK Society
 
 %-------------------------------------------
 %	PUBLICATIONS
@@ -208,7 +208,7 @@ Candidacy Fall 2018 \\
 %	ADDITIONAL SERVICES, EXPERIENCES
 %-------------------------------------------
 
-\section*{ACADEMIC SERVICE, EXPERIENCE}
+\section*{ACADEMIC SERVICE \& EXPERIENCE}
 
 \subsection*{\textbf{Mentored Undergraduates}}
 \begin{itemize}
@@ -224,7 +224,7 @@ Candidacy Fall 2018 \\
 	\item 2017 AGU Fall Meeting $|$ Co-Chair/Co-Convener: \textit{Applications of Thermochronology to Understand Crustal Systems}
 \end{itemize}
 
-\subsection*{\textbf{Seminars and Talks}}
+\subsection*{\textbf{Seminars \& Talks}}
 \textit{Whole Earth Seminar Organizer}, Department of Earth \& Planetary Sciences, UCSC \hfill  Spring 2019
 \begin{itemize}
 	\item One of two graduate student organizers that coordinated a departmental seminar series.
