--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -219,6 +219,23 @@ Candidacy Fall 2018 \\
 		\item Paul Colosi (2017-2018)
 \end{itemize}
 
+\subsection*{\textbf{Laboratory Research \& Management}}
+Analytical Experience:
+	\begin{itemize} [label={}]
+		\item \textit{Expert:} TIMS
+		\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
+		\item \textit{Limited:} ICP-OES, XRF, XRD
+	\end{itemize} \vspace{2ex}
+	
+ \textit{W.M. Keck Isotope Facility}, UCSC \hfill 2016 -- Present\\
+Under the advisorship of lab director Prof. Terry Blackburn, I have been partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
+	\begin{itemize} 
+	\item Maintenance and operation of mass spectrometers and wet chemistry labs.
+	\item Training and supporting researchers in wet chemistry and mass spectrometric methods.
+	\item Preparation, measurement, and reporting of isotopic analyses of geologic and biomineral material for external contracts.
+	\item Procurement and preparation of lab consumables.
+	\end{itemize}
+	
 \subsection*{\textbf{Conference Sessions}}
 \begin{itemize}
 	\item 2017 AGU Fall Meeting $|$ Co-Chair/Co-Convener: \textit{Applications of Thermochronology to Understand Crustal Systems}
@@ -239,16 +256,8 @@ Candidacy Fall 2018 \\
 	\textbf{Society Affiliations:} Geochemical Society, Geological Society of America, Meteoritical Society, American Geophysical Union.
 \end{hangparas}
 
-\begin{center}{\rule{2.5in}{0.5pt}}\end{center}
-
-\subsection*{\textbf{Analytical Experience}}
-\begin{itemize} [label={}]
-	\item \textit{Expert:} TIMS
-	\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
-	\item \textit{Limited:} ICP-OES, XRF, XRD
-\end{itemize}
-
-
+\begin{center}{\rule{2.5in}{0.5pt}}\end{center}  \begin{center}{\rule{2.5in}{0.5pt}}\end{center}
+	
 \subsection*{\textbf{Additional Work Experience}}
 \begin{itemize}[label={}]
 	\item Server and Bartender --- Trio Restaurant, Fish Creek, WI --- 2014.
