Update abstracts, add CVS 2020.

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -190,11 +190,12 @@ Candidacy Fall 2018 \\
 %	CONFERENCE TALK/POSTER
 %-------------------------------------------
 
-\section*{CONFERENCE ABSTRACTS (1\textsuperscript{\tiny{ST}} AUTHOR)}
+\section*{SELECTED CONFERENCE ABSTRACTS}
 
-\begin{center} A more comprehensive list of co-authored abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
+\begin{center} A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
+  \item Varah-Sikes, C.T., Edwards, G.H., Blackburn, T. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
   \item G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
   \item  G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
 	\item  G.H. Edwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
@@ -260,8 +261,8 @@ Under the advisorship of lab director Prof. Terry Blackburn, I have been partial
 	
 \subsection*{\textbf{Additional Work Experience}}
 \begin{itemize}[label={}]
-	\item Server and Bartender --- Trio Restaurant, Fish Creek, WI --- 2014.
-	\item Wildland Firefighter --- USFS handcrew, Winthrop, WA --- 2015.
+	\item Server and Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
+	\item Wildland Firefighter (Type 2) --- U.S. Forest Service, Winthrop, WA, U.S.A. --- 2015.
 \end{itemize}
 
 
